# memlake

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODOS.md  docker-compose.demo.yml  docker-compose.perf.yml  docker-compose.yml
admin/: .env.local.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  next.config.ts  package-lock.json  package.json
admin/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
admin/app/api/cache/: route.ts
admin/app/api/embed/: route.ts
admin/app/api/namespaces/: route.ts
admin/app/api/namespaces/[namespace]/get/: route.ts
admin/app/api/namespaces/[namespace]/layout/: route.ts
admin/app/api/namespaces/[namespace]/objects/: route.ts
admin/app/api/namespaces/[namespace]/objects/decode/: route.ts
admin/app/api/namespaces/[namespace]/query/: route.ts
admin/app/api/namespaces/[namespace]/scan/: route.ts
admin/app/api/namespaces/[namespace]/stats/: route.ts
admin/app/api/namespaces/[namespace]/wal/: route.ts
admin/app/api/obs/: route.ts
admin/app/cache/: page.tsx
admin/app/indexer/: page.tsx
admin/app/ns/[namespace]/: layout.tsx  page.tsx
admin/app/ns/[namespace]/browse/: page.tsx
admin/app/ns/[namespace]/cache/: page.tsx
admin/app/ns/[namespace]/clusters/: page.tsx
admin/app/ns/[namespace]/objects/: page.tsx
admin/app/ns/[namespace]/query/: page.tsx
admin/app/ns/[namespace]/wal/: page.tsx
admin/app/services/: page.tsx
admin/app/services/[node]/: layout.tsx  page.tsx
admin/app/services/[node]/cache/: page.tsx
admin/app/traces/: page.tsx
admin/components/: BrowseView.tsx  CacheView.tsx  ClusterScatter.tsx  ClustersView.tsx  FleetCacheView.tsx  IndexerView.tsx  MemoryDetail.tsx  NamespaceNav.tsx  NamespaceStatsView.tsx  NamespacesView.tsx  ObjectsView.tsx  ObservabilityView.tsx  QueryView.tsx  ServiceDetail.tsx  ServiceNav.tsx  Sidebar.tsx  StatsView.tsx  TraceDetail.tsx  TracesView.tsx  WalView.tsx  filters.tsx  ui.tsx
admin/lib/: client.ts  convert.ts  embed.ts  format.ts  fusion.ts  http.ts  ids.ts  memlake.ts  objectKinds.ts  obs.ts  pca.ts  types.ts  vector.ts
bench/: .gitignore  README.md  docker-compose.qdrant.yml  pyproject.toml
bench/results/: report.md
bench/results/arguana/: exact.json  qdrant.json
bench/results/nfcorpus/: exact.json  memlake+graph.json  memlake.json  memlake.run.json  qdrant.json
bench/results/scifact/: exact.json  memlake+graph.json  memlake.json  memlake.run.json  qdrant.json
bench/src/memlake_bench/: bm25.py  chaos.py  cli.py  cluster.py  datasets.py  embed.py  metrics.py  paths.py  perf.py  perf_datagen.py  qdrant_docker.py  recall_check.py  report.py  results.py  server.py
bench/src/memlake_bench/engines/: exact.py  memlake_engine.py  memlake_grpc.py  qdrant_engine.py
clients/python/: README.md  pyproject.toml
clients/python/memlake_client/: __init__.py  client.py
clients/python/memlake_client/v1/: memlake_pb2.py  memlake_pb2_grpc.py
clients/python/scripts/: gen.sh  smoke.py
crates/mlake-bench/: Cargo.toml
crates/mlake-bench/src/: main.rs  npy.rs
crates/mlake-core/: Cargo.toml
crates/mlake-core/src/: envelope.rs  id.rs  item.rs  lib.rs  manifest.rs  memory.rs  predicate.rs  rkyv_io.rs  tags.rs  tombstones.rs  wal.rs
crates/mlake-fts/: Cargo.toml
crates/mlake-fts/src/: index.rs  lib.rs  tantivy_index.rs  tokenizer.rs
crates/mlake-graph/: Cargo.toml
crates/mlake-graph/src/: lib.rs  radj.rs  retriever.rs  scorer.rs
crates/mlake-index/: Cargo.toml
crates/mlake-index/benches/: query.rs
crates/mlake-index/examples/: derive_bench.rs
crates/mlake-index/src/: engine.rs  fusion.rs  gc.rs  generation.rs  indexer.rs  lib.rs  query_node.rs  spill.rs  sstable.rs  streaming.rs  temporal.rs
crates/mlake-index/tests/: adaptive_probe_e2e.rs  end_to_end.rs  obs_gc.rs
crates/mlake-ivf/: Cargo.toml
crates/mlake-ivf/src/: index.rs  kmeans.rs  lib.rs  vectors.rs
crates/mlake-ivf/tests/: adaptive_probe.rs  recall.rs
crates/mlake-perf/: Cargo.toml  README.md
crates/mlake-perf/src/: cost.rs  datagen.rs  main.rs
crates/mlake-server/: Cargo.toml  build.rs
crates/mlake-server/src/: convert.rs  limiter.rs  main.rs  objects.rs  pb.rs  service.rs  trace.rs
crates/mlake-store/: Cargo.toml
crates/mlake-store/src/: cache.rs  latency.rs  lib.rs  metrics.rs  spans.rs  store.rs
crates/mlake-store/tests/: cache_skew.rs  cas.rs
crates/mlake-wal/: Cargo.toml
crates/mlake-wal/src/: commit.rs  index_queue.rs  lib.rs  tail.rs
crates/mlake-wal/tests/: lease.rs  visibility.rs
demo/: Dockerfile  Dockerfile.dockerignore  pyproject.toml  writer.py
deploy/: README.md  deploy-dev.sh  perf-job.yaml
deploy/envoy/: envoy.demo.yaml
deploy/helm/memlake/: Chart.yaml  values.yaml
deploy/helm/memlake/templates/: NOTES.txt  _helpers.tpl  admin.yaml  indexer.yaml  proxy.yaml  serve.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONFIGURATION.md  DECISIONS.md  DEPLOYMENT.md  SCALE.md  SPEC.md  admin.md  benchmark-harness.md  benchmarks-scale.md  chaos.md  compute-cost.md  concurrency-findings.md  cost-comparison.md  hindsight-integration.md  perf-deployment.md  perf-harness.md  perf-k8s-findings.md  segmented-index.md  sla-model.md  vector-storage.md
docs/arms/: graph.md  temporal.md  text.md  vector.md
integrations/hindsight/: README.md  docker-compose.yml  pyproject.toml
integrations/hindsight/hindsight_memlake/: __init__.py  graph.py  observations.py  provider.py  reads.py
integrations/hindsight/tests/: conftest.py  test_memlake_store.py
perf/: README.md  k8s_load.py  minio.env  prepare_dataset.py  pyproject.toml
perf/results/: rows.jsonl
perf/src/memlake_perf/: __init__.py  harness.py  mixed.py  sweep.py
proto/memlake/v1/: memlake.proto
testdata/: .gitignore
