[project]
name = "memlake-bench"
version = "0.1.0"
description = "Benchmark harness for memlake: BEIR retrieval baselines (exact numpy, Qdrant hybrid) on identical embeddings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "tqdm>=4.66",
    "fastembed>=0.4.2",
    "qdrant-client>=1.12",
    "memlake-client",
]

[tool.uv.sources]
memlake-client = { path = "../clients/python", editable = true }

[project.scripts]
memlake-bench = "memlake_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memlake_bench"]
