[project]
name = "memlake-demo"
version = "0.1.0"
description = "A trickle writer that feeds a memlake namespace forever, to watch the admin UI move."
requires-python = ">=3.10"
dependencies = [
    "memlake-client",
]

[project.scripts]
memlake-demo-writer = "writer:main"

[tool.uv.sources]
memlake-client = { path = "../clients/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# A single top-level module, not a package directory.
include = ["writer.py"]
