[project]
name = "memlake-perf-harness"
version = "0.1.0"
description = "Compute-vs-SLA load harness for memlake: drives concurrent gRPC query load against the real serve+index topology under container CPU/memory limits, and accounts serve-container CPU per QPS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
    "numpy>=1.26",
    "memlake-client",
]

[tool.uv.sources]
memlake-client = { path = "../clients/python", editable = true }

[project.scripts]
memlake-perf-harness = "memlake_perf.harness:main"
memlake-perf-sweep = "memlake_perf.sweep:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memlake_perf"]
