[project]
name = "memlake-client"
version = "0.1.0"
description = "Python gRPC client for the memlake server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
# Only needed to regenerate the stubs from proto/ (see scripts/gen.sh).
dev = ["grpcio-tools>=1.60"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memlake_client"]
