[package]
name = "mlake-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mlake-bench"
path = "src/main.rs"

[dependencies]
mlake-core.workspace = true
mlake-fts.workspace = true
mlake-ivf.workspace = true
mlake-graph.workspace = true
mlake-index.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
