[package]
name = "mlake-fts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlake-core.workspace = true
mlake-store.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
jieba-rs = "0.7"
character_converter = "2"
unicode-normalization = "0.1"
unicode-script = "0.5"
once_cell = "1"
rust-stemmers = "1"

[dev-dependencies]
tempfile = "3"
