[package]
name = "mlake-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlake-core.workspace = true
mlake-store.workspace = true
mlake-wal.workspace = true
mlake-ivf.workspace = true
mlake-fts.workspace = true
mlake-graph.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
