[package]
name = "mlake-ivf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlake-core.workspace = true
mlake-store.workspace = true
futures.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rayon.workspace = true

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
