[package]
name = "mlake-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlake-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url = "2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
