[package]
name = "mlake-wal"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mlake-core.workspace = true
mlake-store.workspace = true
anyhow.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
object_store.workspace = true
